# FastApi

AndreG/: main.py  pyproject.toml
aula-02/: main.py  model_data.py  pyproject.toml
aula-03/: database.json  db.py  main.py  models.py  pyproject.toml  referencias.txt  schemas.py
aula-03/src/: database.json  db.py  main.py  models.py  schemas.py
aula-04/: pyproject.toml
aula-04/src/: db.py  main.py  models.py  schemas.py
aula-05/: pyproject.toml
aula-05/src/: db.py  main.py  models.py  schemas.py
aula-06/src/: config.py  db.py  models.py  schemas.py  security.py
aula-06/src/migrations/: env.py
aula-06/src/migrations/versions/: 2f44526005e4_alterando_coluna_email_para_ser_unica.py  d95d00442ebc_criando_tabela_de_usuarios.py
aula-07/TaskAPI/: .env  README.md  pyproject.toml
aula-07/TaskAPI/src/: main.py
aula-07/TaskAPI/src/controllers/: user.py
aula-07/TaskAPI/src/core/: auth.py  config.py
aula-07/TaskAPI/src/migrations/versions/: 2bcf3f41cceb_criando_tabela_de_usuarios.py  3597f9ee5302_alterando_coluna_email_para_ser_unica.py
aula-07/TaskAPI/src/models/: user.py
aula-07/TaskAPI/src/schemas/: message.py  user.py
aula-07/TaskAPI/src/services/: user.py
